Repopulate the state of the Input Manager when Krita gets the keyboard focus

Krita can get the focus even when the user is already holding some key
pressed (e.g. Control). In such a case, clicking with the mouse button
will start painting instead of color picking, which might be a bit of
surprising for a user.

Theoretically, we can steal focus on mouse enter, but this may be
inconvenient for a user in a bunch of usecases.

BUG:328540